# meta-ads-cli

./: .env.example  .gitignore  LICENSE  README.md  campaign.example.yaml  pyproject.toml
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
examples/: app-install.yaml  ecommerce.yaml
meta_ads/: __init__.py  api.py  campaign.py  cli.py  config.py
plans/260311-1128-production-hardening/: phase-01-api-robustness.md  phase-02-config-validation.md  phase-03-campaign-rollback.md  phase-04-unit-tests.md  plan.md
plans/reports/: docs-manager-260311-1233-initial-documentation.md
tests/: conftest.py  test_api.py  test_campaign.py  test_config.py
